# gradle-class-finder-mcp

./: .gitignore  API.md  DESIGN.md  INSTALL.md  MCP_CONFIG.md  README.md  USAGE.md  UVX_GUIDE.md  UVX_USAGE.md  build.gradle  claude-config-examples.json  claude-desktop-config-example.json  claude-desktop-config-examples.md  claude-desktop-config-uvx.json  claude-desktop-config.json  claude-desktop-local-config.json  claude-desktop-uvx-examples.json  example-config.json  gradle.properties  package.json  pyproject.toml  requirements.txt  run.bat  run.sh  server.py  settings.gradle  setup.py  test_local.py  test_mcp.py
docs/: IDEA_CLASS_SEARCH_ANALYSIS.md
java_helper/: MANIFEST.MF
java_helper/src/main/java/com/example/: ClassFinder.java
src/main/java/com/open_care/: ClassFinder.java
src/main/java/com/opencare/mcp/: GradleClassFinderMcpServer.java
src/main/java/com/opencare/mcp/service/: ClassFinderService.java  SourceCodeService.java
